--- a/webportal/webapp/package.json
+++ b/webportal/webapp/package.json
@@ -61,7 +61,7 @@
     "protractor": "~7.0.0",
     "ts-node": "~3.2.0",
     "tslint": "~6.1.0",
-    "typescript": "^4.3.5",
+    "typescript": "4.3.5",
     "webpack": "^4.8.3"
   }
 }
