--- a/webportal/webapp/angular.json
+++ b/webportal/webapp/angular.json
@@ -25,7 +25,8 @@
               "src/styles.css",
               "node_modules/font-awesome/css/font-awesome.min.css",
               "node_modules/primeng/resources/themes/nova-light/theme.css",
-              "node_modules/primeng/resources/primeng.min.css"
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/prismjs/themes/prism-okaidia.css"
             ],
             "scripts": [],
             "vendorChunk": true,
