--- a/webportal/webapp/package.json
+++ b/webportal/webapp/package.json
@@ -23,9 +23,12 @@
     "@angular/platform-browser": "^15.1.4",
     "@angular/platform-browser-dynamic": "^15.1.4",
     "@angular/router": "^15.1.4",
+    "@aws-amplify/auth": "^5.1.13",
     "@types/node": "^12.11.1",
     "amazon-cognito-auth-js": "^1.1.0",
-    "amazon-cognito-identity-js": "1.21.0",
+    "amazon-cognito-identity-js": "^1.21.0",
+    "amazon-cognito-identity-js-typescript": "^1.22.0",
+    "aws-amplify": "^5.0.19",
     "aws-sdk": "^2.597.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
