--- a/webportal/webapp/angular.json
+++ b/webportal/webapp/angular.json
@@ -169,7 +169,7 @@
                 }
               ],
               "optimization": {
-                "scripts": true,
+                "scripts": false,
                 "styles": {
                   "minify": true,
                   "inlineCritical": false
