--- a/webportal/webapp/angular.json
+++ b/webportal/webapp/angular.json
@@ -24,7 +24,10 @@
             "styles": [
               "src/styles.css",
               "node_modules/font-awesome/css/font-awesome.min.css",
-              "node_modules/prismjs/themes/prism-okaidia.css"
+              "node_modules/prismjs/themes/prism-okaidia.css",
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css"
             ],
             "scripts": [
               "node_modules/marked/marked.min.js"
