--- a/webportal/webapp/package.json
+++ b/webportal/webapp/package.json
@@ -34,6 +34,7 @@
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "http": "^0.0.1-security",
     "jquery": "^3.3.1",
     "marked": "^4.2.12",
     "ngx-markdown": "^15.1.1",
